--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@astrojs/starlight": "^0.34.3",
     "@astrojs/starlight-docsearch": "^0.6.0",
     "@astrojs/starlight-tailwind": "^4.0.1",
+    "@tailwindcss/vite": "^4.1.10",
     "astro": "^5.6.1",
     "dotenv": "^16.5.0",
-    "sharp": "^0.32.5"
+    "sharp": "^0.32.5",
+    "tailwindcss": "^4.1.10"
   }
 }
