--- a/src/content/.obsidian/appearance.json
+++ b/src/content/.obsidian/appearance.json
@@ -1,6 +1,6 @@
 {
   "theme": "obsidian",
-  "cssTheme": "Dracula Official",
+  "cssTheme": "Obsidian gruvbox",
   "showViewHeader": true,
   "showRibbon": true
 }
