feat: added types of company

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,4 +25,10 @@ jobs:
       run: npm run build
     
     # - name: Run tests
-      # run: npm test
+    #   run: npm test --coverage
+
+    # - name: Lint code
+    #   run: npm run lint
+
+    # - name: Security audit
+    #   run: npm audit --audit-level=moderate
