--- a/src/content/.obsidian/appearance.json
+++ b/src/content/.obsidian/appearance.json
@@ -1,6 +1,4 @@
 {
-  "theme": "obsidian",
-  "cssTheme": "Obsidian gruvbox",
-  "showViewHeader": true,
-  "showRibbon": true
+  "baseFontSize": 16,
+  "nativeMenus": false
 }
