upgrade: add more notes

--- a/src/content/.obsidian/app.json
+++ b/src/content/.obsidian/app.json
@@ -1,5 +1,7 @@
 {
   "promptDelete": false,
   "newFileLocation": "folder",
-  "newFileFolderPath": "docs/05_Quick_Notes"
+  "newFileFolderPath": "docs/05_Quick_Notes",
+  "livePreview": true,
+  "defaultViewMode": "source"
 }
