added aws notes

--- a/src/content/.obsidian/app.json
+++ b/src/content/.obsidian/app.json
@@ -3,5 +3,6 @@
   "newFileLocation": "folder",
   "newFileFolderPath": "docs/05_Quick_Notes",
   "livePreview": true,
-  "defaultViewMode": "source"
+  "defaultViewMode": "source",
+  "alwaysUpdateLinks": true
 }
